--- a/src/app/home-principal-page/home-principal-page.component.html
+++ b/src/app/home-principal-page/home-principal-page.component.html
@@ -84,11 +84,11 @@
                 <div class="row" *ngFor="let c of channels">
                   <ng-container *ngIf="video.snippet.channelTitle === c.snippet.title">
                     <div class="row">
-                      <div class="col-2">
+                      <div class="col-sm-2">
                         <img class="thumbnails-channel-icon" src="{{ c.snippet.thumbnails.default.url }}">
                       </div>
 
-                      <div class="col-10">
+                      <div class="col-sm-10">
                         <p class="card-title text-light" *ngIf="video.snippet.title.length >= 80">{{
                           video.snippet.title.slice(0,50)}}...</p>
                         <p class="card-title text-light" *ngIf="video.snippet.title.length < 80">{{
@@ -97,14 +97,14 @@
                     </div>
 
                     <div class="row">
-                      <div class="col-2"></div>
-                      <div class="col-10" style="font-size: 10pt;">{{ c.snippet.title }}<br>
+                      <div class="col-sm-2"></div>
+                      <div class="col-sm-10" style="font-size: 10pt;">{{ c.snippet.title }}<br>
                       </div>
                     </div>
 
                     <div class="row">
-                      <div class="col-2"></div>
-                      <div class="col-10" style="font-size: 10pt;">{{video.statistics.viewCount}} visualizações</div>
+                      <div class="col-sm-2"></div>
+                      <div class="col-sm-10" style="font-size: 10pt;">{{video.statistics.viewCount}} visualizações</div>
                     </div>
                   </ng-container>
                 </div>
