Desenvolvimento do módulo EM ALTA

--- a/src/app/home-principal-page/home-principal-page.component.html
+++ b/src/app/home-principal-page/home-principal-page.component.html
@@ -11,7 +11,7 @@
     <form class="d-flex">
       <button class="btn"><i class="bi bi-camera-reels-fill"></i></button>
       <button class="btn"><i class="bi bi-bell"></i></button>
-      <button class="btn">F</button>
+      <button class="btn" style="background-color: green;border-radius: 80px;">F</button>
     </form>
   </div>
 </nav>
@@ -26,7 +26,7 @@
           <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-collection-play"></i> Inscrições</a></li>
           <hr>
           <p class="text-light">Você <i class="bi bi-caret-right"></i></p>
-          <li class="nav-item"><a class="nav-link active" href="#"><i class="bi bi-user"></i> Início</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#"><i class="bi bi-person"></i> Seu canal</a></li>
           <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-arrow-counterclockwise"></i> Shorts</a></li>
           <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-play-circle"></i> Inscrições</a></li>
           <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-clock"></i> Assistir mais tarde</a></li>
@@ -38,6 +38,7 @@
           <p class="text-light">Inscrições</p>
           AQUI PRECISA APARECER TODAS INSCRIÇÕES
           <p class="text-light">Explorar</p>
+          <li class="nav-item"><a class="nav-link" routerLink="/home/treeding"><i class="bi bi-fire"></i> Em alta</a></li>
           <p class="text-light">Mais do YouTube</p>
           <li class="nav-item"><a class="nav-link active " href="#"><i class="bi bi-youtube text-danger"></i> YouTube
               Premium</a></li>
@@ -55,68 +56,7 @@
     </nav>
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-2">
-
-      <nav class="navbar">
-        <div class="container-fluid">
-          <ul class="nav" *ngIf="categories.length > 0">
-            <li class="nav-item navbar-item-border mx-1" *ngFor="let channel of categories.slice(0,10)">
-              <a class="nav-link" href="#">{{ channel.snippet.title }}</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-      <div class="container">
-
-        <div id="videos">
-          <div class="row">
-            <div class="card mx-1" style="width: 25rem; padding-bottom: 20px;border: none;"
-              *ngFor="let video of videos">
-              <img src="{{ video.snippet.thumbnails.medium.url }}" class="card-img-top"
-                width="{{ video.snippet.thumbnails.medium.width }}"
-                height="{{ video.snippet.thumbnails.medium.height }}">
-
-                <p class="card-title text-light">
-
-                  
-                </p>
-              <div class="card-body">
-                <div class="row" *ngFor="let c of channels">
-                  <ng-container *ngIf="video.snippet.channelTitle === c.snippet.title">
-                    <div class="row">
-                      <div class="col-sm-2">
-                        <img class="thumbnails-channel-icon" src="{{ c.snippet.thumbnails.default.url }}">
-                      </div>
-
-                      <div class="col-sm-10">
-                        <p class="card-title text-light" *ngIf="video.snippet.title.length >= 80">{{
-                          video.snippet.title.slice(0,50)}}...</p>
-                        <p class="card-title text-light" *ngIf="video.snippet.title.length < 80">{{
-                          video.snippet.title}}</p>
-                      </div>
-                    </div>
-
-                    <div class="row">
-                      <div class="col-sm-2"></div>
-                      <div class="col-sm-10" style="font-size: 10pt;">{{ c.snippet.title }}<br>
-                      </div>
-                    </div>
-
-                    <div class="row">
-                      <div class="col-sm-2"></div>
-                      <div class="col-sm-10" style="font-size: 10pt;">{{video.statistics.viewCount}} visualizações</div>
-                    </div>
-                  </ng-container>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="videosShorts" style="padding-top: 10px;">
-          <h3 style="font-weight: lighter;"><b>Shorts</b></h3>
-        </div>
-      </div>
+      <router-outlet></router-outlet>
     </main>
   </div>
 </div>
