Criação do searchlist

--- a/src/app/home-page-videos/home-page-videos.component.html
+++ b/src/app/home-page-videos/home-page-videos.component.html
@@ -32,9 +32,9 @@
                   </div>
 
                   <div class="col-sm-10">
-                    <p class="card-title text-light" *ngIf="video.snippet.title.length >= 80">{{
+                    <p class="card-title" *ngIf="video.snippet.title.length >= 80">{{
                       video.snippet.title.slice(0,50)}}...</p>
-                    <p class="card-title text-light" *ngIf="video.snippet.title.length < 80">{{
+                    <p class="card-title" *ngIf="video.snippet.title.length < 80">{{
                       video.snippet.title}}</p>
                   </div>
                 </div>
