--- a/src/app/home-principal-page/home-principal-page.component.html
+++ b/src/app/home-principal-page/home-principal-page.component.html
@@ -1,17 +1,17 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
   <div class="container-fluid">
     <button class="btn"><i class="bi bi-list"></i></button>
-    <a class="navbar-brand" style="font-weight: bold;"><i class="bi bi-youtube text-danger"></i> YouTube</a>
-    <form class="d-flex justify-content-center mx-auto">
-      <input type="text" class="form-control" type="search" placeholder="Search" aria-label="Search"
-        style="min-width: 600px;border-radius: 40px;">
-      <button class="btn"><i class="bi bi-search"></i></button>
+    <a class="navbar-brand" style="font-weight: bold;" href="#"><i class="bi bi-youtube text-danger"></i> YouTube</a>
+   
+    <form class="d-flex justify-content-center mx-auto" >
+      <input type="text" class="form-control" type="text" placeholder="Pesquisar" aria-label="Search" style="min-width: 600px;border-radius: 40px;" name="textSearch" [(ngModel)]="textSearch">
+      <button class="btn" type="submit" [routerLink]="['/home/searchlist']" [queryParams]="{ search_query : textSearch }"><i class="bi bi-search"></i></button>
     </form>
 
     <form class="d-flex">
       <button class="btn"><i class="bi bi-camera-reels-fill"></i></button>
       <button class="btn"><i class="bi bi-bell"></i></button>
-      <button class="btn" style="background-color: green;border-radius: 80px;">F</button>
+      <button type="submit" class="btn" style="background-color: green;border-radius: 80px;">F</button>
     </form>
   </div>
 </nav>
@@ -25,7 +25,7 @@
           <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-camera"></i> Shorts</a></li>
           <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-collection-play"></i> Inscrições</a></li>
           <hr>
-          <p class="text-light">Você <i class="bi bi-caret-right"></i></p>
+          <p>Você <i class="bi bi-caret-right"></i></p>
           <li class="nav-item"><a class="nav-link active" href="#"><i class="bi bi-person"></i> Seu canal</a></li>
           <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-arrow-counterclockwise"></i> Shorts</a></li>
           <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-play-circle"></i> Inscrições</a></li>
@@ -33,13 +33,13 @@
 
           <!--AQUI PRECISA EXISTIR UM FOR PARA QUE COLOQUE OUTRAS OPÇÕES QUANDO SHOWMORE FOR TRUE-->
 
-          <button class="btn text-light">Mostrar mais <i class="bi bi-arrow-down"></i></button>
+          <button class="btn">Mostrar mais <i class="bi bi-arrow-down"></i></button>
           <hr>
-          <p class="text-light">Inscrições</p>
+          <p>Inscrições</p>
           AQUI PRECISA APARECER TODAS INSCRIÇÕES
-          <p class="text-light">Explorar</p>
+          <p>Explorar</p>
           <li class="nav-item"><a class="nav-link" routerLink="/home/treeding"><i class="bi bi-fire"></i> Em alta</a></li>
-          <p class="text-light">Mais do YouTube</p>
+          <p>Mais do YouTube</p>
           <li class="nav-item"><a class="nav-link active " href="#"><i class="bi bi-youtube text-danger"></i> YouTube
               Premium</a></li>
           <li class="nav-item"><a class="nav-link " href="#"><i class="bi bi-youtube text-danger"></i> YouTube
