--- a/src/app/home-principal-page/home-principal-page.component.html
+++ b/src/app/home-principal-page/home-principal-page.component.html
@@ -57,7 +57,8 @@
     </nav>
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-2">
-      <router-outlet></router-outlet>
+      <router-outlet *ngIf="regionUserDefine" ></router-outlet>
+      <app-error-api *ngIf="!regionUserDefine"></app-error-api>
     </main>
   </div>
 </div>
