--- a/src/app/home-principal-page/home-principal-page.component.html
+++ b/src/app/home-principal-page/home-principal-page.component.html
@@ -23,6 +23,7 @@
       <div class="sidebar-sticky">
         <ul class="nav navbar-expand-lg flex-column">
           <li class="nav-item"><a class="nav-link active" href="#"><i class="bi bi-house"></i> Início</a></li>
+          <li class="nav-item"><a class="nav-link active" routerLink="/home/test"><i class="bi bi-house"></i> Teste</a></li>
           <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-camera"></i> Shorts</a></li>
           <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-collection-play"></i> Inscrições</a></li>
           <hr>
